# ChangeLog for x11-libs/qt
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.402 2006/12/19 14:07:31 caleb Exp $

  19 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
  Make symbol export and examples handling part of configure options instead
  of seds, now that Qt supports them (thanks to bug #157997)

  05 Dec 2006; Caleb Tennis <caleb@gentoo.org>
  +files/qt4-sqlite-configure.patch, qt-4.2.2.ebuild:
  A configure patch to ensure usage of system sqlite (bug #156123)

  05 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
  Can just use -confirm-license now instead of saying yes to the prompt

  04 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
  Qt configuration seems to do a lot with pkgconfig, so we need to dep on it

  04 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
  make the qt3 use flag into qt3support (for qt4 only)

  04 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
  Fix up sqlite and sqlite3 use flags to pull in proper dependencies and use
  proper config options to build proper plugins (from bug #156123)

  04 Dec 2006; Caleb Tennis <caleb@gentoo.org> -qt-3.3.6-r1.ebuild,
  -qt-3.3.6-r2.ebuild, -qt-3.3.6-r3.ebuild:
  remove some stale versions

*qt-4.2.2 (04 Dec 2006)

  04 Dec 2006; Caleb Tennis <caleb@gentoo.org> +qt-4.2.2.ebuild:
  Adding new 4.2.2 version

  29 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> qt-4.1.4-r2.ebuild:
  Stable on Alpha.

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> qt-4.1.4-r2.ebuild,
  qt-4.2.1-r1.ebuild:
  Add ~alpha and ~ia64 keywords.

  25 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> files/digest-qt-4.2.1,
  files/digest-qt-4.2.1-r1, Manifest:
  Fix digests (hopefully).

  24 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> qt-3.3.6-r5.ebuild:
  Fix keywording.

*qt-3.3.6-r5 (24 Nov 2006)

  24 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>