@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.402 2006/12/19 14:07:31 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.403 2006/12/19 14:28:11 caleb Exp $
+
+  19 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
+  Make sure we catch sed the proper stuff
 
   19 Dec 2006; Caleb Tennis <caleb@gentoo.org> qt-4.2.2.ebuild:
   Make symbol export and examples handling part of configure options instead
